--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "node ./src/app.ts",
-    "dev": "nodemon ./src/app.ts"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,16 +13,6 @@
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
     "node-fetch": "^2.6.0",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.6",
-    "sequelize-typescript": "^1.1.0",
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {
-    "@types/node-fetch": "^2.5.6",
-    "@types/express": "^4.17.6",
-    "@types/node": "^13.11.1",
-    "@types/sequelize": "^4.28.8",
-    "ts-node": "^8.8.2"
+    "sequelize": "^5.21.6"
   }
 }
