--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.32",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.6",
     "@types/sequelize": "^4.28.9",
