--- a/parser/package.json
+++ b/parser/package.json
@@ -9,20 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.2.5",
     "node-fetch": "^2.6.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.6",
-    "sequelize-typescript": "^1.1.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.3"
+    "sequelize-typescript": "^1.1.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.32",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.6",
     "@types/node-fetch": "^2.5.7",
-    "@types/validator": "^13.0.0"
+    "@types/validator": "^13.0.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
   }
 }
