--- a/parser/tsconfig.json
+++ b/parser/tsconfig.json
@@ -5,11 +5,19 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "target": "ES2020",
+    "strict": true,
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "esModuleInterop": true,
   },
-  "exclude": ["node_modules", "dist"]
+  "lib": [
+    "ES2020.Promise",
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
